increased compiler plugin MaxPermSize